# agentic-infra-saas-project

./: .gitignore  README.md  config.py  config.yaml  main.py  pyproject.toml  sample_rest_api_logs.txt
agent/: factory.py  orchestrator.py  tools.py
agent/prompts/: __init__.py  design_prompt.py  optimize_prompt.py  output_prompt.py  rag_prompt.py  review_prompt.py  system_prompts.py
llm/: factory.py
mcp_intigration/: __init__.py  mcp_client.py
memory/: session.py  short_term_memory.py
memory_store/: sessions.json
observability/: logger.py
rag/ingestion/: factory.py  semantic_pinecone.py
rag/retriever/: factory.py  semantic_rag.py
